# julius-rs

./: Cargo.toml  LICENSE  NOTICE  README.md
crates/julius/: Cargo.toml
crates/julius/examples/align_wav/: main.rs
crates/julius/src/: adin.rs  iter.rs  lib.rs  recog_process.rs  sentence_align.rs
crates/libjulius-sys/: Cargo.toml  build.rs  configure.patch  source.patch  wrapper.h
crates/libjulius-sys/src/: bindings.rs
